<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".Single_Item_View">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#9969C8"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgbtn"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#9969C8"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        tools:ignore="VectorDrawableCompat" />


    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:text="Sunset Gifts"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="388dp"
        android:layout_height="345dp"
        android:layout_marginTop="70dp"
        app:cardElevation="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="390dp"
                android:layout_height="203dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/PriceView"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_below="@+id/imageView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:text="@string/PriceView"
                android:textColor="#151414"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="266dp"
                android:layout_height="41dp"
                android:layout_below="@+id/PriceView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/ProductName"
                android:textColor="#151515"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Name"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-1dp"
                android:numStars="5"
                android:progressBackgroundTint="#FFEB3B"
                android:progressTint="#FFEB3B"
                android:rating="3.2"
                android:scaleX=".8"
                android:scaleY=".8"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"

                />

            <TextView
                android:id="@+id/RateNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Name"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/ratingBar"
                android:layout_toRightOf="@+id/ratingBar"
                android:text="@string/RateNo"
                android:textColor="#100F0F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/AddtoWislList_Btn"
                android:layout_width="59dp"
                android:layout_height="50dp"
                android:layout_below="@+id/imageView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="127dp"
                android:layout_marginLeft="127dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginBottom="87dp"
                android:layout_toEndOf="@+id/PriceView"
                android:layout_toRightOf="@+id/PriceView"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/ic_fav"
                tools:ignore="VectorDrawableCompat" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="391dp"
        android:layout_height="63dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Quantity"
                android:layout_width="82dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="23dp"
                android:text="@string/Quantity"
                android:textColor="#101010"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextNumber"
                android:layout_width="40dp"
                android:layout_height="34dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="68dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/Quantity"
                android:layout_toRightOf="@+id/Quantity"
                android:background="@drawable/number_border"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#121111"
                android:textColorHighlight="#201E1E"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/descriptionCard"
        android:layout_width="391dp"
        android:layout_height="66dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Description"
                android:layout_width="348dp"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Description"
                android:textColor="#222020"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/ReviewsCard"
        android:layout_width="391dp"
        android:layout_height="66dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Reviews"
                android:layout_width="156dp"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="26dp"
                android:text="@string/Reviews"
                android:textColor="#222020"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/GoToReviews_Btn"
                android:layout_width="46dp"
                android:layout_height="43dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="125dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="37dp"
                android:layout_marginRight="37dp"
                android:layout_marginBottom="14dp"
                android:layout_toEndOf="@+id/Reviews"
                android:layout_toRightOf="@+id/Reviews"
                app:srcCompat="@drawable/ic_save_foreground"
                tools:ignore="VectorDrawableCompat" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/CartBtn"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/CartBtn"
        android:textStyle="bold"
        app:backgroundTint="#9969C8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReviewsCard"
        app:layout_constraintVertical_bias="0.0" />






</androidx.constraintlayout.widget.ConstraintLayout>