<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeUI">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="418dp"
        android:layout_height="100dp"
        android:background="#9969C8"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/headTag"
        android:layout_width="218dp"
        android:layout_height="38dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="12dp"
        android:text="@string/appName"
        android:textColor="#FFF9F9"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="368dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/searchbar_border"
        android:iconifiedByDefault="false"
        android:padding="5dp"
        android:queryHint="Search"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headTag"
        app:layout_constraintVertical_bias="0.538" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="82dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/headTag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_cart"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/Trending"
        android:layout_width="129dp"
        android:layout_height="28dp"
        android:layout_marginTop="344dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Trending"
        android:textColor="#9969C8"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

<!--   -->

    <TextView
        android:id="@+id/heading2"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/heading2"
        android:textColor="#9969C8"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CakeCard"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        app:cardElevation="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading2" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/cake3" />

            <TextView
                android:id="@+id/category1"
                android:layout_width="116dp"
                android:layout_height="21dp"
                android:layout_below="@+id/imageView11"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="3dp"
                android:text="@string/category1"
                android:textColor="#9969C8"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CombosCard"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="36dp"
        app:cardElevation="25dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintBottom_toTopOf="@+id/Trending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CakeCard"
        app:layout_constraintVertical_bias="0.481" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/combos2" />

            <TextView
                android:id="@+id/category2"
                android:layout_width="117dp"
                android:layout_height="21dp"
                android:layout_below="@+id/imageView14"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:text="@string/category2"
                android:textColor="#9969C8"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/FlowersCard"
        android:layout_width="206dp"
        android:layout_height="84dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:cardElevation="25dp"
        app:layout_constraintStart_toEndOf="@+id/CakeCard"
        app:layout_constraintTop_toBottomOf="@+id/heading2" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/flowers1" />

            <TextView
                android:id="@+id/category3"
                android:layout_width="195dp"
                android:layout_height="18dp"
                android:layout_below="@+id/imageView17"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/category4"
                android:textColor="#9969C8"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ChocolatesCard"
        android:layout_width="206dp"
        android:layout_height="86dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="25dp"
        app:layout_constraintStart_toEndOf="@+id/CakeCard"
        app:layout_constraintTop_toBottomOf="@+id/FlowersCard" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="205dp"
                android:layout_height="65dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/chocolatebox" />

            <TextView
                android:id="@+id/category4"
                android:layout_width="194dp"
                android:layout_height="18dp"
                android:layout_below="@+id/imageView18"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="0dp"
                android:text="@string/category3"
                android:textColor="#9969C8"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/GiftsCard"
        android:layout_width="206dp"
        android:layout_height="84dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toEndOf="@+id/CakeCard"
        app:layout_constraintTop_toBottomOf="@+id/ChocolatesCard">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/gifts1" />

            <TextView
                android:id="@+id/category5"
                android:layout_width="191dp"
                android:layout_height="18dp"
                android:layout_below="@+id/imageView19"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="-1dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="0dp"
                android:text="@string/category5"
                android:textColor="#9969C8"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>















</androidx.constraintlayout.widget.ConstraintLayout>